# ICP_Hackathon

./: README.md  dfx.json  index.html  package-lock.json  package.json
hackathon/: index.html  script.js  styles.css  tailwind.config.ts
hackathon/src/: App.tsx
hackathon/src/components/: Navbar.tsx
hackathon/src/pages/: Dashboard.tsx  Index.tsx  Marketplace.tsx  NotFound.tsx  PropertyDetail.tsx
src/: index.css
src/components/: PropertyCard.tsx
src/components/ui/: button.tsx
src/data/: properties.ts
src/demo2_backend/: Cargo.toml  demo2_backend.did
src/demo2_backend/src/: lib.rs
src/demo2_frontend/: package.json  vite.config.js
src/demo2_frontend/src/: App.css  App.jsx  main.jsx
src/demo2_frontend/src/StateManagement/useContext/: useClient.jsx
src/demo2_frontend/src/components/: BorrowingPage.jsx  Dashboard.jsx  LandingPage.jsx  LendingPage.jsx
src/pages/: Index.tsx  Properties.tsx
