[package]
name = "demo2_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.17"
ic-cdk-timers = "0.11"
serde = { version = "1.0", features = ["derive"] }
ciborium = "0.2"
futures-util = "0.3"
ic-cdk-macros = "0.17.1"
serde_json = "1.0"
candid-extractor = "0.1.6"
